--- a/.github/workflows /ci.yml
+++ b/.github/workflows /ci.yml
@@ -24,12 +24,6 @@ jobs:
       #     pip install -r requirements.txt
 
       # Run the app.py script
-      - name: Logging to Linux Maching
+      - name: Run app.py
         run: |
-          ssh root@62.72.27.131
-      - name: Entering the pass for tempory
-        run: |
-          v6mcSijHt#Ox8E3nrY=Z
-      - name: Listing inside VM
-        run: |
-          ls
+          python app.py
