--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,12 @@ jobs:
       #     pip install -r requirements.txt
 
       # Run the app.py script
-      - name: Run app.py
+      - name: Logging to Linux Maching
         run: |
-          python app.py
+          ssh root@62.72.27.131
+      - name: Entering the pass for tempory
+        run: |
+          v6mcSijHt#Ox8E3nrY=Z
+      - name: Listing inside VM
+        run: |
+          ls
