--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       # Run the app.py script
       - name: Logging to Linux Maching
         run: |
-          ssh root@62.72.27.131
+          ssh -t root@62.72.27.131
       - name: Entering the pass for tempory
         run: |
           v6mcSijHt#Ox8E3nrY=Z
